fix: replace -- with -
Signed-off-by: saharshbhansali <saharsh.bhansali15@gmail.com>

--- a/src/components/Certifications.astro
+++ b/src/components/Certifications.astro
@@ -31,7 +31,7 @@ const extraCurricularData = [
   {
     organization: "Association for Computing Machinery - Student Chapter",
     role: "Research Lead",
-    duration: "June, 2022 -- Oct, 2024",
+    duration: "June, 2022 - Oct, 2024",
     location: "VIT, Vellore",
     achievements: [
       "Developed questions for the Reverse Coding (RC) contest with 500+ contestants.",
