--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -4,7 +4,7 @@ const educationData = [
   {
     institution: "Vellore Institute of Technology",
     degree: "Bachelor of Technology - Computer Science and Engineering",
-    duration: "July, 2021 -- July, 2025",
+    duration: "July, 2021 - July, 2025",
     location: "Vellore, India",
     cgpa: "9.18",
     highlights: [
@@ -16,7 +16,7 @@ const educationData = [
   {
     institution: "Bhavan's Rajaji Vidhyashram",
     degree: "CBSE - Physics, Chemistry, Math, Computer Science",
-    duration: "June, 2019 -- June, 2021",
+    duration: "June, 2019 - June, 2021",
     location: "Chennai, India",
     percentage: "96.4%",
     highlights: [
