--- a/src/components/Certifications.astro
+++ b/src/components/Certifications.astro
@@ -158,7 +158,10 @@ const extraCurricularData = [
               
               <!-- Organization Icon -->
               {activity.icon && activity.icon !== null ? (
-                <img src={activity.icon} alt="Organization logo" class="w-48 h-24 object-contain" />
+                <div class="relative">
+                  <img src="/acm-logo.svg" alt="Organization logo" class="w-48 h-24 object-contain dark:hidden" />
+                  <img src="/acm-logo-dark-mode.svg" alt="Organization logo" class="w-48 h-24 object-contain hidden dark:block" />
+                </div>
               ) : (
                 <div class="w-16 h-16 bg-gradient-to-br from-green-500 to-blue-600 rounded-xl flex items-center justify-center text-white text-2xl font-bold shadow-lg">
                   ACM
