--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Contact from '../components/Contact.astro';
 ---
 
 <Layout title="Saharsh Bhansali - Portfolio">
-  <main class="min-h-screen bg-gradient-to-br from-slate-50 to-slate-100 dark:from-slate-900 dark:to-slate-800">
+  <main class="min-h-screen bg-gradient-to-br from-slate-50 to-slate-100 dark:from-dark-950 dark:to-dark-900">
     <Hero />
     <About />
     <Experience />
