--- a/src/components/Certifications.astro
+++ b/src/components/Certifications.astro
@@ -63,7 +63,7 @@ const extraCurricularData = [
         {certificationsData.map((cert) => (
           <div class="bg-white dark:bg-dark-950 rounded-2xl shadow-lg p-6 hover:shadow-xl transition-shadow duration-300">
             <div class="flex items-start gap-4">
-              <div class={`w-12 h-12 bg-${cert.color}-100 dark:bg-${cert.color}-900 rounded-lg flex items-center justify-center flex-shrink-0`}>
+              <div class={`w-12 h-12 bg-${cert.color}-100 dark:bg-${cert.color}-900/30 rounded-lg flex items-center justify-center flex-shrink-0`}>
                 <i class={`${cert.icon} text-${cert.color}-600 dark:text-${cert.color}-400 text-xl`}></i>
               </div>
               <div class="flex-1">
@@ -99,7 +99,7 @@ const extraCurricularData = [
         {achievementsData.map((achievement) => (
           <div class="bg-white dark:bg-dark-950 rounded-2xl shadow-lg p-6 hover:shadow-xl transition-shadow duration-300">
             <div class="flex items-start gap-4">
-              <div class={`w-12 h-12 bg-${achievement.color}-100 dark:bg-${achievement.color}-900 rounded-lg flex items-center justify-center flex-shrink-0`}>
+              <div class={`w-12 h-12 bg-${achievement.color}-100 dark:bg-${achievement.color}-900/30 rounded-lg flex items-center justify-center flex-shrink-0`}>
                 <i class={`${achievement.icon} text-${achievement.color}-600 dark:text-${achievement.color}-400 text-xl`}></i>
               </div>
               <div class="flex-1">
