--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -101,7 +101,7 @@ const educationData = [
       
       <div class="grid md:grid-cols-3 gap-6">
         <div class="text-center">
-          <div class="w-16 h-16 bg-blue-100 dark:bg-blue-900 rounded-full flex items-center justify-center mx-auto mb-4">
+          <div class="w-16 h-16 bg-blue-100 dark:bg-blue-900/30 rounded-full flex items-center justify-center mx-auto mb-4">
             <i class="fas fa-graduation-cap text-blue-600 dark:text-blue-400 text-2xl"></i>
           </div>
           <h4 class="font-semibold text-gray-900 dark:text-white mb-2">Current CGPA</h4>
@@ -109,7 +109,7 @@ const educationData = [
         </div>
         
         <div class="text-center">
-          <div class="w-16 h-16 bg-purple-100 dark:bg-purple-900 rounded-full flex items-center justify-center mx-auto mb-4">
+          <div class="w-16 h-16 bg-purple-100 dark:bg-purple-900/30 rounded-full flex items-center justify-center mx-auto mb-4">
             <i class="fas fa-certificate text-purple-600 dark:text-purple-400 text-2xl"></i>
           </div>
           <h4 class="font-semibold text-gray-900 dark:text-white mb-2">Certifications</h4>
@@ -117,7 +117,7 @@ const educationData = [
         </div>
         
         <div class="text-center">
-          <div class="w-16 h-16 bg-green-100 dark:bg-green-900 rounded-full flex items-center justify-center mx-auto mb-4">
+          <div class="w-16 h-16 bg-green-100 dark:bg-green-900/30 rounded-full flex items-center justify-center mx-auto mb-4">
             <i class="fas fa-trophy text-green-600 dark:text-green-400 text-2xl"></i>
           </div>
           <h4 class="font-semibold text-gray-900 dark:text-white mb-2">Hackathon Wins</h4>
