fix: remove redundant content from featured projects

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -3,12 +3,11 @@
 const projectsData = [
   {
     title: "Decentralized Voting",
-    description: "Built an API for a decentralized referendum platform using alternative voting systems.",
+    description: "API for a decentralized referendum platform using alternative voting systems.",
     duration: "Sept, 2024 - Nov, 2024",
     technologies: ["FastAPI", "PyTest", "Docker", "Jupyter Notebook"],
     github: "https://github.com/saharshbhansali/bohemian-backend",
     features: [
-      "Built an API for a decentralized referendum platform using alternative voting systems.",
       "Visualized the difference between traditional voting and alternative systems like Ranked Choice Voting.",
       "Implemented a Zero Knowledge Proof based user authentication system.",
       "Containerized the backend for easy and consistent deployments across systems."
@@ -16,13 +15,12 @@ const projectsData = [
   },
   {
     title: "CLI - Top",
-    description: "Unofficial CLI to access the university's Learning Management System (LMS); used by 400+ students.",
+    description: "Unofficial CLI to access the university's Learning Management System (LMS), used by 400+ students.",
     duration: "Dec, 2023 - Jan, 2024",
     technologies: ["Go", "Cobra", "Glamour", "GitHub Actions", "BurpSuite"],
     // github: "https://github.com/ACM-VIT/cli-top",
     demo: "https://cli-top.acmvit.in",
     features: [
-      "Unofficial CLI to access the university's Learning Management System (LMS); used by 400+ students.",
       "Developed key features - autologin, attendance alert, kill-switch for centralized control, and mark totaling.",
       "Built a CI/CD pipeline to distribute binaries using GitHub Actions."
     ]
