feat: add tech to workex

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,7 +6,7 @@ const experienceData = [
     position: "Analyst, Intern",
     duration: "Jan, 2025 - Present",
     location: "On-site",
-    technologies: ["Python", "Pandas", "FastAPI", "Azure", "Docker", "Plotly-Dash", "NextJS"],
+    technologies: ["Azure", "Docker", "Python", "PySpark", "Pandas", "FastAPI", "NextJS", "Plotly-Dash"],
     achievements: [
       "Developed dashboards using Python, Pandas, and Plotly-Dash/ReactJS migrating out of Tableau, with a projected savings opportunity of $200K per annum in licensing costs.",
       "Deployed and maintained multiple tools with Docker and Azure. Optimized existing tools' performance (10x latency reduction) and scalability (multi-user support and load balancing).",
